# Mini_MDFT

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYRIGHT.md  LICENSE  README.md  REUSE.toml
.github/workflows/: __build_base.yml  __check_docker_files.yml  build_test.yml  ci.yml  cleanup_base.yml  nightly.yml  pre_build_base.yml  reuse.yml
common/: CMakeLists.txt  MDFT_Asserts.hpp  MDFT_Concepts.hpp  MDFT_Constants.hpp  MDFT_Convolution.hpp  MDFT_Energy.hpp  MDFT_Grid.hpp  MDFT_Math_Utils.hpp  MDFT_OrientationProjectionTransform.hpp  MDFT_Rotation.hpp  MDFT_Solute.hpp  MDFT_Solvent.hpp  MDFT_System.hpp  MDFT_Thermo.hpp  MDFT_Wigner.hpp
common/IO/: MDFT_Commandline_Utils.hpp  MDFT_IO_Utils.hpp  MDFT_ReadCLuc.hpp  MDFT_String_Utils.hpp
data/dcf/tip3p/: tip3p-ck_nonzero_nmax1_ml.license
docker/clang/: Dockerfile
docker/gcc/: Dockerfile
docker/intel/: Dockerfile
docker/nvcc/: Dockerfile
docker/rocm/: Dockerfile
input/: dft.json  dft2.json  solute.json
perf_test/: BenchmarkMain.cpp  CMakeLists.txt  PerfTest_OrientationProjectionTransform.cpp  PerfTest_Solvent.cpp
src/: CMakeLists.txt  mini-mdft.cpp  mini-mdft.hpp
unit_test/: CMakeLists.txt  Test_Convolution.cpp  Test_Grid.cpp  Test_IO.cpp  Test_Main.cpp  Test_Math_Utils.cpp  Test_OrientationProjectionTransform.cpp  Test_Rotation.cpp  Test_Solute.cpp  Test_Solvent.cpp  Test_String_Utils.cpp  Test_Thermo.cpp  Test_Utils.hpp  Test_Wigner.cpp
